--- a/blog_detail.html
+++ b/blog_detail.html
@@ -95,10 +95,9 @@
                 </button>
                 <div class="cart">
                     <a href="shopping_cart.html">
-                        <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i>
+                      <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i> <span class="cart__count">4</span>
                     </a>
-                    <span class="cart__count">4</span>
-                </div>
+                  </div>
 
                 <div class="collapse navbar-collapse" id="myMenu">
                     <ul class="navbar-nav menu">
@@ -276,7 +275,7 @@
                             </ul>
                         </div>
                     </aside>
-                    <div class="col-lg-9 col-md-12 col-12">
+                    <div class="col-lg-9 col-md-12 col-12 detail-blog__content">
                         <article class="article">
                             <img src="images/blog/blog1.jpg" alt="Blog">
                             <h2 class="article__heading">
