--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
         </button>
         <div class="cart">
           <a href="shopping_cart.html">
-            <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i>
+            <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i> <span class="cart__count">4</span>
           </a>
-          <span class="cart__count">4</span>
         </div>
 
         <div class="collapse navbar-collapse" id="myMenu">
