--- a/introduce.html
+++ b/introduce.html
@@ -97,10 +97,9 @@
                     <span class="navbar-toggler-icon navbar__toggler-edit"></span>
                 </button>
                 <div class="cart">
-                    <a href="shopping_cart.html">
-                        <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i>
-                    </a>
-                    <span class="cart__count">4</span>
+                  <a href="shopping_cart.html">
+                    <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i> <span class="cart__count">4</span>
+                  </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="myMenu">
