--- a/blog_detail.html
+++ b/blog_detail.html
@@ -20,106 +20,80 @@
 
 <body>
   <header>
-    <!-- Modal -->
-    <div class="modal fade" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-lg modal-dialog-centered " role="document">
-        <div class="modal-content modal-lg register-modal-content">
-          <div class="modal-header border-0">
-            <button type="button" class="close register-modal__close" data-dismiss="modal">&times;</button>
-          </div>
-          <div class="modal-body">
-            <h2 class="register-modal__heading">Đăng kí nhận tin tức của chúng tôi</h2>
-            <p class="register-modal__paragraph">Bạn muốn nhanh chóng nhận các tin tức khuyến mại và ưu đãi lớn của chúng tôi hàng tuần ? Hãy đăng kí ngay theo
-              form dưới đây</p>
-            <form action="#" method="POST" class="register-modal__form">
-              <div class="form-group  ">
-                <input type="email" class="form-control inputbox" id="email" placeholder="Nhập email của bạn tại đây..." />
-              </div>
-              <button type="submit" class="button__common button__yellow w-100">Đăng kí</button>
-              <div class="form-group register-modal__checkbox  ">
-                <input type="checkbox" value="none"> Không hiện lại thông báo này
-              </div>
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
     <div class="header-top ">
-      <div class="container">
-        <div class="row d-flex justify-content-between">
-          <ul class="col-md-4 header-top__items">
-            <li class="header__item">
-              <a href="#" class="header-top__link">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="header__item">
-              <a href="#" class="header-top__link">
-                 <i class="fab fa-google-plus-g"></i>
-              </a>
-            </li>
-            <li class="header__item">
-              <a href="#" class="header-top__link">
-                 <i class="fab fa-pinterest-p"></i>
-              </a>
-            </li>
-            <li class="header__item">
-              <a href="#" class="header-top__link">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-          </ul>
-          <ul class="col-md-4 col-12 header-top__items">
-            <li class="header__item">
-              <a href="register.html" class="header-top__link text-uppercase">Đăng Kí</a>
-            </li>
-            <li class="header__item">
-              <a href="login.html" class="header-top__link text-uppercase">Đăng Nhập</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="header-bottom">
-      <div class="container">
-        <div class="row flex-nowrap justify-content-between align-items-center header-bottom-display ">
-          <div class="col-md-2 col-sm-2 col-12 header__logo">
-            <h1>
-              <a href="index.html">
-                <img src="images/home/logo.png" alt="Thành Công">
-              </a>
-            </h1>
-          </div>
-          <div class="col-md-8 col-sm-9 col-12 ">
-            <div class="row header-bottom__content">
-              <div class="header-bottom__info">
-                <span class="header-bottom__title">Hotline:</span>
-                <span class="header-bottom__phone">(04) 9500 9650 - (04) 9500 8850</span>
+            <div class="container">
+              <div class="row d-flex justify-content-between">
+                <ul class="col-md-4 header-top__items">
+                  <li class="header__item">
+                    <a href="#" class="header-top__link">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header-top__link">
+                      <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header-top__link">
+                      <i class="fa fa-pinterest" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header-top__link">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+                <ul class="col-md-4 col-12 header-top__items">
+                  <li class="header__item">
+                    <a href="register.html" class="header-top__link text-uppercase">Đăng Kí</a>
+                  </li>
+                  <li class="header__item">
+                    <a href="login.html" class="header-top__link text-uppercase">Đăng Nhập</a>
+                  </li>
+                </ul>
               </div>
-              <div class="header-bottom__info">
-                <span class="header-bottom__title">Đặt hàng nhanh:</span>
-                <span class="header-bottom__phone">(04) 9500 9650 - (04) 9500 8850</span>
-              </div>
-              <form action="#" class="col-md-5 header-bottom-search ">
-                <input class="form-control form-control-rounded search" type="text" title="Enter search query here.." placeholder="Tìm kiếm..">
-                <button type="submit" class=" header-bottom__icon">
-                  <i class="fa fa-search " aria-hidden="true"></i>
-                </button>
-              </form>
             </div>
           </div>
+<div class="header-bottom">
+    <div class="container">
+        <div class="row flex-nowrap justify-content-between align-items-center header-bottom-display ">
+            <div class="col-md-2 col-sm-2 col-12 header__logo">
+                <h1>
+                    <a href="index.html">
+                        <img src="images/home/logo.png" alt="Thành Công">
+                    </a>
+                </h1>
+            </div>
+            <div class="col-md-9 col-sm-9 col-12 ">
+                <div class="row header-bottom__content">
+                    <div class="header-bottom__info">
+                        <span class="header-bottom__title">Hotline:</span>
+                        <span class="header-bottom__phone">(04) 9500 9650 - (04) 9500 8850</span>
+                    </div>
+                    <div class="header-bottom__info">
+                        <span class="header-bottom__title">Đặt hàng nhanh:</span>
+                        <span class="header-bottom__phone">(04) 9500 9650 - (04) 9500 8850</span>
+                    </div>
+                    <form action="#" class="col-md-5 header-bottom-search ">
+                        <input class="form-control form-control-rounded search" type="text" title="Enter search query here.." placeholder="Tìm kiếm..">
+                        <button type="submit" class=" header-bottom__icon">
+                            <i class="fa fa-search " aria-hidden="true"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <!-- navbar -->
-    <nav class="navbar-expand-lg navbar-dark bg-black">
-      <div class="container">
+<!-- navbar -->
+<nav class="navbar-expand-lg navbar-dark bg-black">
+    <div class="container">
         <button class="navbar-toggler menu__button" type="button" data-toggle="collapse" data-target="#myMenu" aria-controls="myMenu"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon navbar__toggler-edit"></span>
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon navbar__toggler-edit"></span>
         </button>
         <div class="cart">
           <a href="shopping_cart.html">
@@ -128,11 +102,27 @@
         </div>
 
         <div class="collapse navbar-collapse" id="myMenu">
-          <ul class="navbar-nav menu">
-            <li class="nav-item menu__item active">
-              <a class="menu__link" href="index.html">Trang chủ</a>
-            </li>
-            <li cl
+                <ul class="navbar-nav menu">
+                        <li class="nav-item menu__item ">
+                          <a class="menu__link" href="index.html">Trang chủ</a>
+                        </li>
+                        <li class="nav-item menu__item">
+                          <a class="menu__link" href="blog.html">Tin tức</a>
+                        </li>
+                        <li class="nav-item menu__item">
+                          <a class="menu__link" href="product.html">Sản phẩm</a>
+                        </li>
+                        <li class="nav-item menu__item active">
+                          <a class="menu__link" href="introduce.html">Giới thiệu</a>
+                        </li>
+                        <li class="nav-item menu__item">
+                          <a class="menu__link" href="contact.html">Liên hệ</a>
+                        </li>
+                      </ul>
+        </div>
+    </div>
+</nav>
+</header>
     <div class="main__content">
         <div class="container">
             <ul class="path__list">
