--- a/blog.html
+++ b/blog.html
@@ -139,51 +139,40 @@
                         <div class="sidebar__category">
                             <ul class="category__sidebar-list">
                                 <li class="sidebar__head">
-
                                     <h2 class="d-inline-block">
                                         <a href="#" class="sidebar__head-link">
                                             <i class="fa fa-th-large sidebar__head-icon" aria-hidden="true"></i> Danh mục sản phẩm</a>
                                     </h2>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon " aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"> <i class="fa fa-th-large category__sidebar-icon " aria-hidden="true"></i>Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"> <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"><i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"> <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link">  <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"><i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"> <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"><i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"><i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                                 <li class="category__sidebar-item">
-                                    <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i>
-                                    <a href="#" class="category__sidebar-link">Máy khoan, cắt CNC</a>
+                                    <a href="#" class="category__sidebar-link"> <i class="fa fa-th-large category__sidebar-icon" aria-hidden="true"></i> Máy khoan, cắt CNC</a>
                                 </li>
                             </ul>
                             <select class="category__sidebar-mobile">
