--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-   <link rel="shortcut icon" type="image/png" href="images/home/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="images/home/logo.png" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
@@ -59,12 +59,12 @@
             </li>
             <li class="header__item">
               <a href="#" class="header-top__link">
-                 <i class="fab fa-google-plus-g"></i>
+                <i class="fab fa-google-plus-g"></i>
               </a>
             </li>
             <li class="header__item">
               <a href="#" class="header-top__link">
-                 <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-pinterest-p"></i>
               </a>
             </li>
             <li class="header__item">
@@ -125,7 +125,8 @@
         </button>
         <div class="cart">
           <a href="shopping_cart.html">
-            <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i> <span class="cart__count">4</span>
+            <i class="fa fa-cart-arrow-down cart__icon" aria-hidden="true"></i>
+            <span class="cart__count">4</span>
           </a>
         </div>
 
@@ -150,144 +151,137 @@
         </div>
       </div>
     </nav>
-  
+
   </header>
   <div class="main__content">
-      <!-- slider -->
-      <div class="content-slider">
-          <div class="container ">
-            <div class="row">
-              <div class="col-sm-8">
-                <div class="slider">
-                  <div id="mySlider" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ul class="carousel-indicators">
-                      <li data-target="#mySlider" data-slide-to="0" class="active"></li>
-                      <li data-target="#mySlider" data-slide-to="1"></li>
-                      <li data-target="#mySlider" data-slide-to="2"></li>
-                      <li data-target="#mySlider" data-slide-to="3"></li>
-                    </ul>
-                    <!-- The slideshow -->
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
-                        <div class="slider__product">
-                          <span class="slider__product-type">Máy khoan đa năng</span>
-                          <span class="slider__product-name">Dewalt</span>
-                          <ul class="slider__product-description">
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                          </ul>
-                          <button type="button" class="btn product__button">Đặt hàng </button>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
-                        <div class="slider__product">
-                          <span class="slider__product-type">Máy khoan đa năng</span>
-                          <span class="slider__product-name">Dewalt</span>
-                          <ul class="slider__product-description">
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                          </ul>
-                          <button type="button" class="btn product__button">Đặt hàng </button>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
-                        <div class="slider__product">
-                          <span class="slider__product-type">Máy khoan đa năng</span>
-                          <span class="slider__product-name">Dewalt</span>
-                          <ul class="slider__product-description">
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                          </ul>
-                          <button type="button" class="btn product__button">Đặt hàng </button>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
-                        <div class="slider__product">
-                          <span class="slider__product-type">Máy khoan đa năng</span>
-                          <span class="slider__product-name">Dewalt</span>
-                          <ul class="slider__product-description">
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                            <li class="slider__product-item">
-                              <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
-                          </ul>
-                          <button type="button" class="btn product__button">Đặt hàng </button>
-                        </div>
-                      </div>
+    <!-- slider -->
+    <div class="content-slider">
+      <div class="container ">
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="slider">
+              <div id="mySlider" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ul class="carousel-indicators">
+                  <li data-target="#mySlider" data-slide-to="0" class="active"></li>
+                  <li data-target="#mySlider" data-slide-to="1"></li>
+                  <li data-target="#mySlider" data-slide-to="2"></li>
+                  <li data-target="#mySlider" data-slide-to="3"></li>
+                </ul>
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
+                    <div class="slider__product">
+                      <span class="slider__product-type">Máy khoan đa năng</span>
+                      <span class="slider__product-name">Dewalt</span>
+                      <ul class="slider__product-description">
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                      </ul>
+                      <button type="button" class="btn product__button">Đặt hàng </button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
+                    <div class="slider__product">
+                      <span class="slider__product-type">Máy khoan đa năng</span>
+                      <span class="slider__product-name">Dewalt</span>
+                      <ul class="slider__product-description">
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                      </ul>
+                      <button type="button" class="btn product__button">Đặt hàng </button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
+                    <div class="slider__product">
+                      <span class="slider__product-type">Máy khoan đa năng</span>
+                      <span class="slider__product-name">Dewalt</span>
+                      <ul class="slider__product-description">
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                      </ul>
+                      <button type="button" class="btn product__button">Đặt hàng </button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/home/slider/slider1.jpg" alt="Los Angeles" class="slide__img">
+                    <div class="slider__product">
+                      <span class="slider__product-type">Máy khoan đa năng</span>
+                      <span class="slider__product-name">Dewalt</span>
+                      <ul class="slider__product-description">
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                        <li class="slider__product-item">
+                          <i class="fa fa-check slider__product-icon" aria-hidden="true"></i> Thiết kế nhỏ gọn, phù hợp đa mục đích </li>
+                      </ul>
+                      <button type="button" class="btn product__button">Đặt hàng </button>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-4">
-                <div class="list-group slider-info">
-                  <a href="#" class="d-flex align-items-center slider-info__item active" data-target="#mySlider" data-slide-to="0">
-                    <div class="row">
-                      <div class="col-3 d-flex justify-content-center align-items-center ">
-                        <i class="fas fa-sync-alt slider-info__icon"></i>
-                      </div>
-                      <div class="col-9 pl-0">
-                        <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
-                        <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#" class="d-flex align-items-center slider-info__item  " data-target="#mySlider" data-slide-to="1">
-                    <div class="row">
-                      <div class="col-3 d-flex justify-content-center align-items-center ">
-                        <i class="fas fa-sync-alt slider-info__icon"></i>
-                      </div>
-                      <div class="col-9 pl-0">
-                        <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
-                        <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#" class="d-flex align-items-center slider-info__item  " data-target="#mySlider" data-slide-to="2">
-                    <div class="row">
-                      <div class="col-3 d-flex justify-content-center align-items-center ">
-                       <i class="fas fa-sync-alt slider-info__icon"></i>
-                      </div>
-                      <div class="col-9 pl-0">
-                        <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
-                        <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#" class="d-flex align-items-center slider-info__item  " data-target="#mySlider" data-slide-to="3">
-                    <div class="row">
-                      <div class="col-3 d-flex justify-content-center align-items-center ">
-                        <i class="fas fa-sync-alt slider-info__icon"></i>
-                      </div>
-                      <div class="col-9 pl-0">
-                        <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
-                        <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
             </div>
           </div>
+          <div class="col-sm-4">
+            <ul class="slider-info">
+              <li>
+                <a href="#" class="slider-info__item active" data-target="#mySlider" data-slide-to="0">
+                  <i class="fas fa-sync-alt slider-info__icon"></i>
+                  <div class="slider-info__desc">
+                    <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
+                    <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                  <a href="#" class="slider-info__item" data-target="#mySlider" data-slide-to="1">
+                    <i class="fas fa-sync-alt slider-info__icon"></i>
+                    <div class="slider-info__desc">
+                      <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
+                      <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                    <a href="#" class="slider-info__item" data-target="#mySlider" data-slide-to="2">
+                      <i class="fas fa-sync-alt slider-info__icon"></i>
+                      <div class="slider-info__desc">
+                        <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
+                        <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                      <a href="#" class="slider-info__item" data-target="#mySlider" data-slide-to="3">
+                        <i class="fas fa-sync-alt slider-info__icon"></i>
+                        <div class="slider-info__desc">
+                          <h3 class="slider-info__heading">Miễn phí vận chuyển</h3>
+                          <p class="slider-info__content">Chúng tôi miễn phí vận chuyển với các đơn hàng trị giá trên 1000.000Đ</p>
+                        </div>
+                      </a>
+                    </li>
+            </ul>
+
+          </div>
         </div>
+      </div>
+    </div>
     <div class="container">
       <section class="category">
         <div class="d-flex justify-content-between align-items-center category__title ">
@@ -2414,7 +2408,7 @@
         <div class="big__banner-caption">
           <h3 class="big__banner-title">Roket Wokaru</h3>
           <p class="big__banner-paragraph">Máy cắt, khoan đa năng tích hợp điều khiển từ xa loại nhỏ thích hợp với các hộ gia đình</p>
-          <div class="product__content-action mt-0">
+          <div class="product__content-action d-flex justify-content-center mt-0">
             <a href="#" class="product__content-button button__yellow">Mua ngay</a>
             <a href="#" class="product__content-button button__default">Xem chi tiết</a>
           </div>
